--- a/rabbitmq/package.json
+++ b/rabbitmq/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^4.1.1"
+    "amqplib": "^0.8.0",
+    "chalk": "^4.1.1",
+    "uuid": "^8.3.2"
   }
 }
