--- a/rabbitmq-task/package.json
+++ b/rabbitmq-task/package.json
@@ -16,7 +16,12 @@
     "typescript": "4.3.5"
   },
   "dependencies": {
+    "@types/amqplib": "0.8.1",
+    "@types/uuid": "8.3.1",
+    "amqplib": "0.8.0",
+    "chalk": "4.1.1",
     "rabbitmq-common": "file:../rabbitmq-common",
-    "ts-node": "10.1.0"
+    "ts-node": "10.1.0",
+    "uuid": "8.3.2"
   }
 }
