message types split into topics

--- a/rabbitmq-task/.vscode/launch.json
+++ b/rabbitmq-task/.vscode/launch.json
@@ -15,7 +15,8 @@
       ],
       "env": {
         "NODE_ENV": "dev"
-      }
+      },
+      "console": "integratedTerminal"
     },
     {
       "type": "node",
